syntax = "proto3";

message MonsterProto {
  int32 id = 1;
  int32 position_x = 2;
  int32 position_y = 3;
  string previous_direction = 4;
}
